# best-rag

./: .cursorrules  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  BEST-PRACTICES.md  CLEANUP-COMPLETE.md  CODEX-FINAL-FIXES.md  CODEX-FIXES.md  CONTRIBUTING.md  CRITICAL-FIXES-APPLIED.md  DEEP-REVIEW.md  DEPLOYMENT.md  DOCS-CLEANUP.md  HONEST-STATUS.md  IMPLEMENTATION-COMPLETE.md  LINT-FIXES-APPLIED.md  LINT-FIXES-COMPLETE.md  Makefile  PERFORMANCE-FIX.md  PORTS.md  PRE-GITHUB-CHECKLIST.md  QUICK-DEPLOY.md  QUICKSTART.md  README.md  REVIEW-SUMMARY.md  SECURITY.md  SYSTEM-VERIFIED.md  TROUBLESHOOTING.md  VERIFICATION-REPORT.md  docker-compose.yml  render.yaml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  QUICKSTART.md  README-LOCAL.md  SETUP-COMPLETO.md  diagnostico-completo.py  env.example.txt  fly.toml  pyproject.toml  reiniciar-backend.sh  requirements.txt  test-retrieval.py  verify_system.py
backend/alembic/: env.py
backend/scripts/: check-status.sh  clean_chromadb.py  fix-env.sh  setup.sh  start-backend.sh
backend/src/: __init__.py  config.py  main.py  shared_services.py
backend/src/agents/: __init__.py  knowledge_agent.py  nodes.py  state.py
backend/src/api/v1/: agents.py  documents.py  health.py  queries.py
backend/src/models/: __init__.py
backend/src/observability/: __init__.py  tracing.py
backend/src/rag/: __init__.py  cache.py  chunking.py  embeddings.py  query_expansion.py  reranker.py  retriever.py
backend/src/schemas/: __init__.py  agents.py  api.py  rag.py
backend/src/services/: __init__.py  agent_service.py  document_parser.py  document_service.py  document_storage.py  postgres_storage.py
backend/tests/: __init__.py
backend/tests/fixtures/: rag.py
backend/tests/integration/: test_document_lifecycle.py
backend/tests/unit/: test_agents_schemas.py  test_api_schemas.py  test_rag_schemas.py
backend/tests/unit/agents/: test_knowledge_agent.py  test_nodes.py
backend/tests/unit/api/: test_agents.py  test_documents.py  test_health.py  test_queries.py
backend/tests/unit/rag/: test_chunking.py  test_retriever.py
backend/tests/unit/services/: test_agent_service.py  test_document_parser.py  test_document_service.py
frontend/: DESIGN.md  Dockerfile  Dockerfile.dev  README.md  SOLUCAO-NPM-INSTALL.md  fix-and-install.sh  iniciar-servidor.sh  install-and-run.sh  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DocumentUpload.tsx  QueryInterface.tsx
scripts/: INICIAR-FRONTEND.sh  INICIAR-TUDO.sh  dev.sh  start-frontend.sh  start-site.sh  test-local.sh
